--- a/Project-1/assets/stylesheets/main.css
+++ b/Project-1/assets/stylesheets/main.css
@@ -82,7 +82,7 @@ Custom Styles
 
 body {
     font-family: 'Gothic A1', sans-serif;
-   background-color: #4E5266; 
+    background-color: #4E5266; 
 }
 
 .container {
@@ -93,6 +93,7 @@ body {
 .left {
     float: left;
 }
+
 .right {
     float: right;
 }
@@ -188,7 +189,7 @@ Hero Section
 
 .text {
     font-size: 20px;
-    color: white;
+    color: rgba(255, 255, 255, 0.75);
     margin: 15px 0 35px 0;
 }
 
@@ -216,10 +217,12 @@ Hero Section
 .aside {
     width: 60%;
 }
-
+.aside-pic {
+    height: 599px;
+}
 .main-img {
-    width: 660px;
-    height: 600px;
+    width: 100%;
+    height: 599px;
     object-fit: cover;
 }
 
